--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "axios": "^0.18.0",
     "element-ui": "^2.6.1",
+    "less": "^3.11.0",
+    "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
     "vue": "^2.6.6",
     "vue-axios": "^2.1.4",
